--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,15 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-slides [options]="slideOpts">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+    <ion-slide *ngFor="let movie of featuredMovies">
+
+      <ion-card>
+        <img [src]="movie.backdrop_path | images">
+      </ion-card>
+
+    </ion-slide>
+
+  </ion-slides>
+
 </ion-content>
