--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,15 +1,35 @@
 <ion-content>
 
-  <ion-slides [options]="slideOpts">
+  <ion-grid fixed>
 
-    <ion-slide *ngFor="let movie of featuredMovies">
+    <ion-row>
 
-      <ion-card>
-        <img [src]="movie.backdrop_path | images">
-      </ion-card>
+      <ion-col>
+        <h3>
+          Películas Nuevas
+        </h3>
+      </ion-col>
 
-    </ion-slide>
+    </ion-row>
 
-  </ion-slides>
+  </ion-grid>
+
+  <app-slideshow-backdrop [movies]="featuredMovies"></app-slideshow-backdrop>
+
+  <ion-grid fixed>
+
+    <ion-row>
+
+      <ion-col>
+        <h3>
+          Cartelera
+        </h3>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
+  <app-slideshow-poster [movies]="featuredMovies"></app-slideshow-poster>
 
 </ion-content>
