--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -32,4 +32,20 @@
 
   <app-slideshow-poster [movies]="featuredMovies"></app-slideshow-poster>
 
+  <ion-grid fixed>
+
+    <ion-row>
+
+      <ion-col>
+        <h3>
+          Populares
+        </h3>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
+  <app-slideshow-poster [movies]="popularMovies"></app-slideshow-poster>
+
 </ion-content>
