134. Mostrar pares de películas

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -46,6 +46,6 @@
 
   </ion-grid>
 
-  <app-slideshow-poster [movies]="popularMovies"></app-slideshow-poster>
+  <app-slideshow-pairs [movies]="popularMovies"></app-slideshow-pairs>
 
 </ion-content>
