--- a/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
+++ b/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
@@ -2,7 +2,7 @@
 
   <ion-slide *ngFor="let movie of movies">
 
-    <ion-card>
+    <ion-card (click)="showMovieDetails(movie.id)">
       <img [src]="movie.backdrop_path | images">
     </ion-card>
 
