--- a/src/app/components/slideshow-pairs/slideshow-pairs.component.html
+++ b/src/app/components/slideshow-pairs/slideshow-pairs.component.html
@@ -9,7 +9,7 @@
         *ngFor="let movie of moviePair"
       >
 
-        <ion-card>
+        <ion-card (click)="showMovieDetails(movie.id)">
           <img 
             [src]="movie.poster_path | images"
             class="poster"
