--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -1,3 +1,103 @@
-<p>
-  detail works!
-</p>
+<ion-content *ngIf="movieDetails">
+
+  <ion-label class="titulo">
+    <h1>
+      {{ movieDetails.title }}
+    </h1>
+  </ion-label>
+
+  <img 
+    [src]="movieDetails.backdrop_path | images" 
+    *ngIf="movieDetails.backdrop_path"
+  >
+
+  <ion-grid>
+
+    <ion-row>
+
+      <ion-col 
+        size="4"
+        class="poster-detalle-sobre"
+      >
+
+        <ion-card class="poster">
+
+          <img 
+            [src]="movieDetails.poster_path | images" 
+            class="poster" 
+            *ngIf="movieDetails.poster_path"
+          >
+
+        </ion-card>
+
+      </ion-col>
+
+      <ion-col size="8">
+
+        <ion-item>
+
+          <ion-icon
+            slot="start"
+            name="thumbs-up"
+            color="primary"
+          >
+          </ion-icon>
+
+          <ion-label>
+            Rating
+          </ion-label>
+
+          <ion-note
+            slot="end"
+            color="primary"
+          >
+            {{ movieDetails.vote_average }}
+          </ion-note>
+
+        </ion-item>
+
+        <ion-item>
+
+          <ion-icon
+            slot="start"
+            name="people-circle"
+            color="primary"
+          >
+          </ion-icon>
+
+          <ion-label>
+            Votos
+          </ion-label>
+
+          <ion-note
+            slot="end"
+            color="primary"
+          >
+            {{ movieDetails.vote_count }}
+          </ion-note>
+
+        </ion-item>
+
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
+  <ion-grid fixed>
+
+    <ion-row>
+
+      <ion-col size="12">
+
+        <ion-label>
+          {{ movieDetails.overview }}
+        </ion-label>
+
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
+</ion-content>
