--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -90,9 +90,42 @@
 
       <ion-col size="12">
 
-        <ion-label>
+        <ion-label *ngIf="trim">
+          {{ movieDetails.overview | slice:0:150 }}...
+        </ion-label>
+
+        <ion-label *ngIf="!trim">
           {{ movieDetails.overview }}
         </ion-label>
+
+        <ion-label>
+
+        </ion-label>
+
+        <ion-label 
+          color="primary"
+          (click)="trim = false"
+          *ngIf="trim"
+        >
+          Leer más!
+        </ion-label>
+
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col size="12">
+
+        <ion-chip 
+          *ngFor="let genre of movieDetails.genres"
+          color="primary"
+        >
+          <ion-label>
+            {{ genre.name }}
+          </ion-label>
+        </ion-chip>
 
       </ion-col>
 
@@ -100,4 +133,88 @@
 
   </ion-grid>
 
+  <ion-grid fixed>
+
+    <ion-row>
+
+      <ion-col size="12">
+        <ion-label>
+          Actores
+        </ion-label>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-slides [options]="slidePosterOpts">
+
+      <ion-slide *ngFor="let actor of movieCast">
+
+        <ion-card class="card-actor">
+
+          <img 
+            *ngIf="actor.profile_path" 
+            [src]="actor.profile_path | images"
+          >
+
+          <img 
+            *ngIf="!actor.profile_path" 
+            src="/assets/no-avatar.jpg"
+          >
+
+          <ion-label class="actor-name">
+            {{ actor.name }}
+          </ion-label>
+
+        </ion-card>
+
+      </ion-slide>
+
+    </ion-slides>
+
+  </ion-grid>
+
 </ion-content>
+
+<ion-footer>
+
+  <ion-toolbar>
+
+    <ion-buttons slot="start">
+
+      <ion-button (click)="back()">
+
+        <ion-icon
+          slot="start"
+          name="arrow-back"
+        >
+        </ion-icon>
+
+        <ion-label>
+          Regresar
+        </ion-label>
+
+      </ion-button>
+
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+
+      <ion-button (click)="favorite()">
+
+        <ion-label>
+          Favorito
+        </ion-label>
+
+        <ion-icon
+          slot="end"
+          name="star-outline"
+        >
+        </ion-icon>
+
+      </ion-button>
+
+    </ion-buttons>
+
+  </ion-toolbar>
+
+</ion-footer>
