--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -21,7 +21,7 @@
 
 <ion-content>
 
-  <ion-grid>
+  <ion-grid *ngIf="loading">
     <ion-row>
       <ion-col class="ion-text-center">
         <ion-spinner name="crescent">
@@ -30,7 +30,7 @@
     </ion-row>
   </ion-grid>
 
-  <ion-list>
+  <ion-list *ngIf="movies.length === 0">
 
     <ion-list-header>
       <ion-label>
@@ -48,5 +48,38 @@
     </ion-item>
     
   </ion-list>
+  
+  <ion-grid fixed>
+
+    <ion-row>
+
+      <ion-col 
+        size="6"
+        *ngFor="let movie of movies"
+      >
+
+        <ion-card (click)="showMovieDetails(movie.id)">
+
+          <img [src]="movie.poster_path | images">
+
+          <ion-card-header>
+            <ion-card-subtitle>
+              {{ movie.release_date }}
+            </ion-card-subtitle>
+          </ion-card-header>
+
+          <ion-card-content>
+            <h2>
+              {{ movie.title }}
+            </h2>
+          </ion-card-content>
+
+        </ion-card>
+
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
 
 </ion-content>
