145. Cargar favoritos del storage y verificar si existe una película por ID

--- a/src/app/components/detail/detail.component.html
+++ b/src/app/components/detail/detail.component.html
@@ -207,7 +207,7 @@
 
         <ion-icon
           slot="end"
-          name="star-outline"
+          [name]="selectedAsFavorite ? 'star' : 'star-outline'"
         >
         </ion-icon>
 
