--- a/src/app/components/slideshow-pairs/slideshow-pairs.component.html
+++ b/src/app/components/slideshow-pairs/slideshow-pairs.component.html
@@ -9,7 +9,10 @@
         *ngFor="let movie of moviePair"
       >
 
-        <ion-card (click)="showMovieDetails(movie.id)">
+        <ion-card 
+          mode="md"
+          (click)="showMovieDetails(movie.id)"
+        >
           <img 
             [src]="movie.poster_path | images"
             class="poster"
