--- a/src/app/components/slideshow-poster/slideshow-poster.component.html
+++ b/src/app/components/slideshow-poster/slideshow-poster.component.html
@@ -2,7 +2,10 @@
 
   <ion-slide *ngFor="let movie of movies">
 
-    <ion-card (click)="showMovieDetails(movie.id)">
+    <ion-card 
+      mode="md"
+      (click)="showMovieDetails(movie.id)"
+    >
       <img 
         [src]="movie.poster_path | images"
         class="poster"
